--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,6 @@ language: cpp
 dist: xenial
 sudo: required
 
-# Common packages.
-addons:
-  apt:
-    packages:
-      - curl
-
 # Common external dependencies.
 before_install:
   # Install GSL
@@ -48,10 +42,53 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
+    - env: VERSION=7
+      os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+    - env: VERSION=8
+      os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-8
+    - env: VERSION=6.0
+      os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-6.0
+            - g++-7
+    - env: VERSION=7
+      os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-xenial-7
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-7
+            - g++-7
+    - os: osx
+      compiler: clang
+      osx_image: xcode9.4
     - os: osx
       compiler: clang
       osx_image: xcode10.1
 
+# Build and run.
 script:
   - mkdir build
   - cd build
