--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,16 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-8
+    - env: VERSION=5.0
+      os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang-5.0
+            - g++-7
     - env: VERSION=6.0
       os: linux
       compiler: clang
