--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,15 @@ install:
 # Build matrix
 matrix:
   include:
+    - env: VERSION=5
+      os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
     - env: VERSION=6
       os: linux
       compiler: gcc
