Significantly expanded testing for typed API Changed semantics around out of bounds array accesses Added dart::packet::at family of access functions Added dart::packet::find family of iterator lookup functions Added dart::packet::{reserve,resize} to expose std::vector primitives.

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -13,4 +13,4 @@ CMD cd /root/libdart                                            \
   && mkdir build                                                \
   && cd build                                                   \
   && cmake .. -D32bit=ON -Dstatic_test=ON -Dextended_test=ON    \
-  && make
+  && make VERBOSE=1
