Added an experimental, ABI-stable, raw C interface To enable easier binding from other languages/FFI interfaces. Can be built with -Dbuild_abi=ON, linked against with -ldart_abi Include file is #include <dart/abi.h> Tests are currently minimal and documentation is yet to come.

--- a/.travis.yml
+++ b/.travis.yml
@@ -192,10 +192,10 @@ matrix:
 script:
   - mkdir build
   - cd build
-  - cmake .. -Dextended_test=ON -Dbenchmark=ON
+  - cmake .. -Dextended_test=ON -Dbenchmark=ON -Dbuild_abi=ON
   - make VERBOSE=1
   - ctest
   - make clean
-  - cmake .. -Duse_sajson=ON
+  - cmake .. -Duse_sajson=ON -Dextended_test=OFF
   - make VERBOSE=1
   - ctest
