--- a/.travis.yml
+++ b/.travis.yml
@@ -194,8 +194,8 @@ script:
   - cd build
   - cmake .. -Dextended_test=ON -Dbenchmark=ON -Dbuild_abi=ON
   - make VERBOSE=1
-  - ctest
+  - ctest --output-on-failure
   - make clean
   - cmake .. -Duse_sajson=ON -Dextended_test=OFF
   - make VERBOSE=1
-  - ctest
+  - ctest --output-on-failure
