Updated Dart ABI files to compile on MSVC Wasn't too bad, but had to hack around an MSVC bug that breaks generic lambdas inside of functions with C language linkage Still have more work to do on MSVC warnings, have all suppressed with /w at the moment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ if (NOT COMPILER_SUPPORTS_CXX_STANDARD)
 endif ()
 
 if (MSVC)
-  set(dart_default_compile_options "${DART_CXX_STD_OPT};/EHsc;/Zc:__cplusplus;/permissive-;/bigobj")
+  set(dart_default_compile_options "${DART_CXX_STD_OPT};/EHsc;/Zc:__cplusplus;/permissive-;/bigobj;/w")
 else ()
   set(dart_default_compile_options "${DART_CXX_STD_OPT};-Wall;-Wextra;-Wno-implicit-fallthrough;-Wno-unused-local-typedefs")
 endif ()
@@ -73,27 +73,43 @@ if (build_abi)
   target_include_directories(dart_abi_static PUBLIC include ${libgsl})
   set_target_properties(dart_abi PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION})
 
+  # Set our preprocessor to export dll symbols if we're on windows.
+  if (MSVC)
+    set_property(TARGET dart_abi APPEND PROPERTY COMPILE_DEFINITIONS DART_EXPORTS)
+    set_property(TARGET dart_abi_static APPEND PROPERTY COMPILE_DEFINITIONS DART_EXPORTS)
+  endif ()
+
   # Set compile switches based on what's installed
   if (use_sajson)
     set_property(TARGET dart_abi APPEND PROPERTY COMPILE_DEFINITIONS DART_USE_SAJSON)
     set_property(TARGET dart_abi_static APPEND PROPERTY COMPILE_DEFINITIONS DART_USE_SAJSON)
   endif ()
   if (librj)
+    target_include_directories(dart_abi PUBLIC ${librj})
+    target_include_directories(dart_abi_static PUBLIC ${librj})
     set_property(TARGET dart_abi APPEND PROPERTY COMPILE_DEFINITIONS DART_HAS_RAPIDJSON)
     set_property(TARGET dart_abi_static APPEND PROPERTY COMPILE_DEFINITIONS DART_HAS_RAPIDJSON)
   endif ()
   if (can_build_yaml)
+    target_include_directories(dart_abi PUBLIC ${libyaml})
+    target_include_directories(dart_abi_static PUBLIC ${libyaml})
     set_property(TARGET dart_abi APPEND PROPERTY COMPILE_DEFINITIONS DART_HAS_YAML)
     set_property(TARGET dart_abi_static APPEND PROPERTY COMPILE_DEFINITIONS DART_HAS_YAML)
   endif ()
 
   # Setup optimization flags.
-  if (MSVC)
+  if (MSVC AND CMAKE_BUILD_TYPE MATCHES RELEASE)
     target_compile_options(dart_abi PUBLIC /O2 ${dart_default_compile_options})
     target_compile_options(dart_abi_static PUBLIC /O2 ${dart_default_compile_options})
-  else ()
+  elseif (MSVC)
+    target_compile_options(dart_abi PUBLIC /DEBUG ${dart_default_compile_options})
+    target_compile_options(dart_abi_static PUBLIC /DEBUG ${dart_default_compile_options})
+  elseif (CMAKE_BUILD_TYPE MATCHES RELEASE)
     target_compile_options(dart_abi PUBLIC -O3 ${dart_default_compile_options})
     target_compile_options(dart_abi_static PUBLIC -O3 ${dart_default_compile_options})
+  else ()
+    target_compile_options(dart_abi PUBLIC -g ${dart_default_compile_options})
+    target_compile_options(dart_abi_static PUBLIC -g ${dart_default_compile_options})
   endif ()
 endif ()
 
